- Category of the doctor is unreadable problem fixed

--- a/resources/assets/css/main_new.css
+++ b/resources/assets/css/main_new.css
@@ -2135,7 +2135,8 @@ img {
 .entity-line__label {
   text-transform: uppercase;
   color: #fff;
-  font-size: 10px;
+  font-size: 11px;
+  font-weight: 600;
   -webkit-border-radius: 2px;
   border-radius: 2px;
   background-color: #06d09e;
